wip: new alias table

--- a/web/angular-wallet/src/locales/en.json
+++ b/web/angular-wallet/src/locales/en.json
@@ -32,8 +32,15 @@
   "alias_sale": "Alias Sale",
   "alias_sale_cancellation": "Alias Sale Cancellation",
   "alias_transfer": "Alias Transfer",
-  "alias_uri": "Alias URI",
+  "alias_off_sale" : "Not for sale",
+  "alias_on_sale_public" : "On Public Sale",
+  "alias_on_sale_private" : "On Private Sale",
+  "alias_uri": "Alias Content",
   "aliases": "Aliases",
+  "alias_content_format": "Content Format",
+  "alias_status": "Status",
+  "alias_price": "Price",
+  "alias_buyer": "Buyer",
   "all_transactions": "All Transactions",
   "amount": "Amount",
   "amount_nqt": "Amount",
