wip: view and register alias finished

--- a/web/angular-wallet/src/locales/en.json
+++ b/web/angular-wallet/src/locales/en.json
@@ -11,6 +11,7 @@
   "account_info": "Account Info",
   "account_watch": "Import an account you'd like to observe only",
   "account_watch_short": "Watch Account",
+  "account_profile": "Profile",
   "accounts": "Accounts",
   "actions": "Actions",
   "activate": "Activate",
@@ -337,7 +338,7 @@
   "sender_address": "Sender Address",
   "sender_id": "Sender ID",
   "sender_public_key": "Sender Public Key",
-  "set_account_info": "Edit Account Info",
+  "set_account_info": "Edit Account Profile",
   "set_reward_recipient": "Join Pool",
   "settings": "Settings",
   "settings_node": "Node Configuration",
@@ -489,11 +490,18 @@
   "enter_url": "Enter URL",
   "enter_account_id": "Enter Account Id",
   "enter_alias_ref": "Enter Referenced Alias Name",
+  "enter_alias_name": "Enter Alias Name",
   "alias_ref": "Alias Reference",
   "avatar": "Avatar",
   "accept": "Accept",
   "accept_json_content": "Click to accept the content for submitting",
   "src44_info": "SRC44 is the standard for structured information in description fields. Other Apps are capable to visualize this information also.",
   "view": "View",
-  "edit_alias": "Edit/Update Alias"
+  "view_alias": "View Alias",
+  "edit_alias": "Edit Alias",
+  "edit_alias_content": "Edit Content",
+  "verify_alias": "Verify Availability",
+  "verify_alias_description": "Type your alias name and check its availability",
+  "alias_taken": "This alias was taken already",
+  "created": "Created"
 }
