Fully Fledged Aliases  (#1703)
* chore: added signumswap to token table

* wip: new alias table

* wip: alias editor done

* wip: view and register alias finished

* wip: alias sale working

* wip: added cancel sale and buy alias

* wip: improved alias actions, added global back/forward navgation

* chore: minor thing

* fix: account stuff

--- a/web/angular-wallet/src/locales/en.json
+++ b/web/angular-wallet/src/locales/en.json
@@ -11,6 +11,8 @@
   "account_info": "Account Info",
   "account_watch": "Import an account you'd like to observe only",
   "account_watch_short": "Watch Account",
+  "account_profile": "Profile",
+  "account_details": "Account Details",
   "accounts": "Accounts",
   "actions": "Actions",
   "activate": "Activate",
@@ -32,8 +34,15 @@
   "alias_sale": "Alias Sale",
   "alias_sale_cancellation": "Alias Sale Cancellation",
   "alias_transfer": "Alias Transfer",
-  "alias_uri": "Alias URI",
+  "alias_off_sale" : "Not for sale",
+  "alias_on_sale_public" : "On Public Sale",
+  "alias_on_sale_private" : "On Private Sale",
+  "alias_uri": "Alias Content",
   "aliases": "Aliases",
+  "alias_content_format": "Content Format",
+  "alias_status": "Status",
+  "alias_price": "Price",
+  "alias_buyer": "Buyer",
   "all_transactions": "All Transactions",
   "amount": "Amount",
   "amount_nqt": "Amount",
@@ -48,6 +57,7 @@
   "asset_issuance": "Token Issuance",
   "asset_name": "Token Name",
   "asset_transfer": "Token Transfer",
+  "asset_trade": "Trade on SignumSwap",
   "assets": "Tokens",
   "attachment": "Attachment",
   "avgCommitment": "Avg. Commitment",
@@ -329,7 +339,7 @@
   "sender_address": "Sender Address",
   "sender_id": "Sender ID",
   "sender_public_key": "Sender Public Key",
-  "set_account_info": "Set Account Info",
+  "set_account_info": "Edit Account Profile",
   "set_reward_recipient": "Join Pool",
   "settings": "Settings",
   "settings_node": "Node Configuration",
@@ -349,6 +359,8 @@
   "subscriptions": "Subscriptions",
   "subtype": "Subtype",
   "success_alias_register": "Alias registered successfully.",
+  "success_alias_update": "Alias updated successfully.",
+  "success_alias_sell": "Alias set on sale successfully.",
   "success_clipboard_copy": "Copied to the clipboard successfully.",
   "success_send_money": "Signa has been sent.",
   "success_set_account_info": "Your account info update has been submitted successfully.",
@@ -478,8 +490,31 @@
   "enter_ipfs_hash": "Enter IPFS Hash",
   "homepage": "Home Page",
   "enter_url": "Enter URL",
+  "enter_account_id": "Enter Account Id",
+  "enter_alias_ref": "Enter Referenced Alias Name",
+  "enter_alias_name": "Enter Alias Name",
+  "alias_ref": "Alias Reference",
   "avatar": "Avatar",
   "accept": "Accept",
   "accept_json_content": "Click to accept the content for submitting",
-  "src44_info": "SRC44 is the standard for structured information in description fields. Other Apps are capable to visualize this information also."
+  "src44_info": "SRC44 is the standard for structured information in description fields. Other Apps are capable to visualize this information also.",
+  "view": "View",
+  "view_alias": "View Alias",
+  "edit_alias": "Edit Alias",
+  "edit_alias_content": "Edit Content",
+  "verify_alias": "Verify Availability",
+  "verify_alias_description": "Type your alias name and check its availability",
+  "alias_taken": "This alias was taken already",
+  "created": "Created",
+  "is_private_offer_q": "Is Private Offer?",
+  "enter_recipient": "Enter Address, Account Id or Alias Name",
+  "alias_on_sale": "This Alias is on sale",
+  "alias_cancel_sale": "Cancel Alias Sale",
+  "success_alias_cancel_sale": "Sale cancelled successfully",
+  "alias_direct_offer": "This Alias is a direct offer",
+  "success_alias_buy": "Congratz. You just bought a new Alias",
+  "can-buy-alias": "The Alias is on sale and can be acquired. Click 'Buy' if you are willing to acquire the Alias",
+  "more_alias_on": "More about Aliases on",
+  "no_aliases_available": "No Aliases available",
+  "owner": "Owner"
 }
